test/parse/module/bad-memory-empty.txt
;;; ERROR: 1
(module (memory))
(;; STDERR ;;;
out/test/parse/module/bad-memory-empty.txt:2:16: syntax error, unexpected ), expecting ( or NAT
(module (memory))
               ^
;;; STDERR ;;)
